# rpzero_scanner

./: shell.nix
.cache/clangd/index/: alfred.h.5945E8EF169CC7DF.idx  alfredRX.cpp.B954FD7EB81027CE.idx  alfredRX.h.6A9C18418A144641.idx  client.cpp.AC4C927D4BF623DB.idx  client.h.1C0CE601B87E8CD4.idx
alfred_rx/: CMakeLists.txt
alfred_rx/inc/: alfred.h  alfredRX.h  client.h
alfred_rx/src/: alfredRX.cpp  client.c  client.cpp
alfred_sender/: .gitignore  alfred  alfred.h  ble_main.c  ble_main.h  client.c  compile.sh  main.c  packet.h  whitelist_macs.txt
blAlfred_scanner/: CMakeLists.txt  ble_scanner.c  ble_scanner.h  client.c
blAlfred_scanner/bluez/: CMakeLists.txt
blAlfred_scanner/scanner_alfred/: CMakeLists.txt
blAlfred_scanner/scanner_alfred/inc/: alfred.h  ble_scanner.h  client.h  deque.h
blAlfred_scanner/scanner_alfred/src/: ble_scanner.c  client.c  hashtable.c
coord_map/: Cargo.toml  coords.txt
coord_map/src/: main.rs
cpp_scanner/: CMakeLists.txt
cpp_scanner/dbus/: gattlib_advertisement.c
cpp_scanner/examples/ble_scan/: CMakeLists.txt  ble_scan.c
dbus/: gattlib_adapter.c
examples/ble_scan/: CMakeCache.txt  ble_scan.c
indoor_locale/: Cargo.toml
indoor_locale/src/: main.rs
